--- a/lldupdir.xcodeproj/xcshareddata/xcschemes/lldupdir.xcscheme
+++ b/lldupdir.xcodeproj/xcshareddata/xcschemes/lldupdir.xcscheme
@@ -36,7 +36,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "/Users/dennislang/opt/projects/projects-xcode/_ll/lldupdirdir"
+      customWorkingDirectory = "/Users/dennislang/opt/projects/projects-xcode/_ll/lldupdir"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugXPCServices = "NO"
@@ -58,7 +58,19 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "-delete=second"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "-h"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "test/test1"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "test/test2"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
