--- a/lldupdir-ms/lldupdir.vcxproj
+++ b/lldupdir-ms/lldupdir.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="..\lldupdir\lldupdir.cpp" />
     <ClCompile Include="..\lldupdir\md5.cpp" />
     <ClCompile Include="..\lldupdir\parseutil.cpp" />
+    <ClCompile Include="..\lldupdir\signals.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lldupdir\command.hpp" />
@@ -36,6 +37,7 @@
     <ClInclude Include="..\lldupdir\lstring.hpp" />
     <ClInclude Include="..\lldupdir\md5.hpp" />
     <ClInclude Include="..\lldupdir\parseutil.hpp" />
+    <ClInclude Include="..\lldupdir\signals.hpp" />
     <ClInclude Include="..\lldupdir\xxhash64.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -126,6 +128,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -161,6 +164,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
