--- a/lldupdir-ms/lldupdir.vcxproj.filters
+++ b/lldupdir-ms/lldupdir.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="..\lldupdir\parseutil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\lldupdir\signals.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lldupdir\directory.hpp">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\lldupdir\parseutil.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\lldupdir\signals.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
