--- a/lldupdir-ms/lldupdir.vcxproj
+++ b/lldupdir-ms/lldupdir.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="..\lldupdir\directory.cpp" />
     <ClCompile Include="..\lldupdir\dupscan.cpp" />
     <ClCompile Include="..\lldupdir\hash.cpp" />
+    <ClCompile Include="..\lldupdir\hasher.cpp" />
     <ClCompile Include="..\lldupdir\lldupdir.cpp" />
     <ClCompile Include="..\lldupdir\md5.cpp" />
     <ClCompile Include="..\lldupdir\parseutil.cpp" />
@@ -33,6 +34,7 @@
     <ClInclude Include="..\lldupdir\directory.hpp" />
     <ClInclude Include="..\lldupdir\dupscan.hpp" />
     <ClInclude Include="..\lldupdir\hash.hpp" />
+    <ClInclude Include="..\lldupdir\hasher.hpp" />
     <ClInclude Include="..\lldupdir\ll_stdhdr.hpp" />
     <ClInclude Include="..\lldupdir\lstring.hpp" />
     <ClInclude Include="..\lldupdir\md5.hpp" />
