--- a/lldupdir-ms/lldupdir.vcxproj.filters
+++ b/lldupdir-ms/lldupdir.vcxproj.filters
@@ -77,5 +77,13 @@
     <ClInclude Include="..\lldupdir\hasher.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="lldupdir.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
