fix comparison logic

--- a/lldupdir.xcodeproj/xcshareddata/xcschemes/lldupdir.xcscheme
+++ b/lldupdir.xcodeproj/xcshareddata/xcschemes/lldupdir.xcscheme
@@ -58,8 +58,16 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-delete=second"
+            argument = "-ver"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-all"
             isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-delete=second"
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-h"
@@ -67,10 +75,22 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "test/test1"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "test/test2"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-delete=first"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "/Users/dennislang/opt/old-mac/desktop/andrioid-java"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "/Users/dennislang/Desktop/android-java"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
