Added unix hardlink option

--- a/lldupdir.xcodeproj/xcshareddata/xcschemes/lldupdir.xcscheme
+++ b/lldupdir.xcodeproj/xcshareddata/xcschemes/lldupdir.xcscheme
@@ -63,11 +63,15 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-all"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-delete=second"
             isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-link"
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-h"
@@ -75,23 +79,23 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "test/test1"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "test/test2"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-delete=first"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "/Users/dennislang/opt/old-mac/desktop/andrioid-java"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "/Users/dennislang/Desktop/android-java"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
